--- a/css/styles.css
+++ b/css/styles.css
@@ -472,13 +472,20 @@ font-size: 18px;
   background-color: #2e2f42;
 }
 
+.footer-title {
+margin-bottom: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #FFFFFF;
+}
+/*
 .footer-subtitle {
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #FFFFFF;
-margin-bottom: 16px;
-}
+}*/
 
 .footer-icon-list {
 display: flex;
@@ -491,6 +498,7 @@ list-style: none;
 .footer-icon-item {
   width: 40px;
   height: 40px;
+  
 }
 
 .footer-icon-link {
@@ -502,6 +510,7 @@ list-style: none;
  justify-content: center;
  align-items: center;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 
  .footer-right {
@@ -514,6 +523,7 @@ list-style: none;
 
 .footer-icon {
   fill: #f4f4fd;
+  min-width: 165px;
 }
 
 .footer-icon-link:hover,
@@ -610,12 +620,17 @@ list-style: none;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: var(--navyblue);
+  color: #2E2F42;
   margin-bottom: 16px;
 }
 
 .modal-form .form-field {
   margin-bottom: 8px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field {
+  margin-bottom: 16px;
 }
 
 .form-label {
@@ -624,6 +639,7 @@ list-style: none;
   font-size: 12px;
   line-height: 1.17;
   color: #8e8f99;
+  letter-spacing: 0.04em;
 }
 
 .form-input-wrapper {
@@ -638,7 +654,7 @@ list-style: none;
   border-radius: 4px;
   background-color: transparent;
   outline: transparent;
-  transition: border-color 250ms;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
 }
 
@@ -652,7 +668,7 @@ list-style: none;
   top: 50%;
   transform: translateY(-50%);
   fill: #2e2f42;
-  transition: fill 250ms;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus + .form-icon {
@@ -668,8 +684,13 @@ list-style: none;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   background-color: transparent;
-  transition: border-color 250ms;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
+  line-height: 1.17;
+  letter-spacing: 0.04;
+  color: rgba(46, 47, 66, 0.4);
+
+
 }
 
 .form-textarea:focus {
@@ -684,7 +705,7 @@ margin-bottom: 24px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: var(--light-slate);
+  color: #8e8f99;
   display: flex;
   align-items: center;
   user-select: none;
@@ -700,7 +721,10 @@ margin-bottom: 24px;
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition: background-color 250ms, border 250ms, fill 250ms;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .form-checkbox:checked + .form-checkbox-label .custom-checkbox {
@@ -731,7 +755,8 @@ margin-bottom: 24px;
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  transition: background-color 250ms;
+  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -826,12 +851,14 @@ color: #fff;
   font-weight: 500;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  
 }
 
 .subscribe-button:hover,
 .subscribe-button:focus {
   background-color: #31d0aa;
+  fill:#F4F4FD;
 }
 
 .subscribe-icon {
