--- a/css/styles.css
+++ b/css/styles.css
@@ -600,7 +600,7 @@ list-style: none;
 
 .modal-close-icon {
   fill: #2e2f42;
-  transition: fill 250ms;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .modal-close:hover,
@@ -625,12 +625,8 @@ list-style: none;
 }
 
 .modal-form .form-field {
-  margin-bottom: 8px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-field {
   margin-bottom: 16px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-label {
@@ -687,7 +683,7 @@ list-style: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
   line-height: 1.17;
-  letter-spacing: 0.04;
+  letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
 
 
@@ -706,7 +702,7 @@ margin-bottom: 24px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
+  
   align-items: center;
   user-select: none;
 }
@@ -755,14 +751,15 @@ margin-bottom: 24px;
   border-radius: 4px;
   border: none;
   cursor: pointer;
-  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  letter-spacing: 0.04em;
 }
 
 .form-submit-btn:hover,
 .form-submit-btn:focus {
   background-color: #404bbf;
+  fill: #ffffff;
 }
 
 .visually-hidden {
@@ -858,7 +855,6 @@ color: #fff;
 .subscribe-button:hover,
 .subscribe-button:focus {
   background-color: #31d0aa;
-  fill:#F4F4FD;
 }
 
 .subscribe-icon {
