--- a/css/styles.css
+++ b/css/styles.css
@@ -478,14 +478,8 @@ font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #FFFFFF;
+min-width: 165px;
 }
-/*
-.footer-subtitle {
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #FFFFFF;
-}*/
 
 .footer-icon-list {
 display: flex;
@@ -594,11 +588,12 @@ list-style: none;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  transition: background-color 250ms, border 250ms;
+  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 0;
 }
 
-.modal-close-icon {
+.modal-icon-close {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
@@ -607,6 +602,7 @@ list-style: none;
 .modal-close:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
 
 .modal-close:hover .modal-close-icon,
@@ -625,7 +621,7 @@ list-style: none;
 }
 
 .modal-form .form-field {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -726,7 +722,7 @@ margin-bottom: 24px;
 .form-checkbox:checked + .form-checkbox-label .custom-checkbox {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff;
+  fill: #F4F4FD;
 }
 
 .form-policy-link {
