--- a/css/styles.css
+++ b/css/styles.css
@@ -543,6 +543,10 @@ list-style: none;
   max-width: 264px;
 }
 
+.subscribe-button {
+  min-width: 165px;
+}
+
    /* Modal */
 
 .backdrop {
@@ -558,9 +562,9 @@ list-style: none;
    z-index: 100;
 }
 
-.backdrop.is-open {
+.backdrop.is open {
   opacity: 1;
-  visibility: hidden;
+  visibility: visible;
   pointer-events: none;
 }
 
@@ -600,7 +604,7 @@ list-style: none;
   padding: 0;
 }
 
-.modal-icon-close {
+.icon-close {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
@@ -688,13 +692,12 @@ list-style: none;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-
-
 }
 
 .form-textarea:focus {
   border-color: #4D5AE5;
 }
+
      /* Checkbox */
 
 .form-checkbox-wrapper {
