--- a/css/styles.css
+++ b/css/styles.css
@@ -631,9 +631,13 @@ list-style: none;
   margin-bottom: 16px;
 }
 
-.modal-form .form-field {
+.modal-form {
   margin-bottom: 16px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field {
+  margin-bottom: 8px;
 }
 
 .form-label {
