--- a/css/styles.css
+++ b/css/styles.css
@@ -702,6 +702,10 @@ list-style: none;
   border-color: #4D5AE5;
 }
 
+.modal-form .form-field:nth-of-type(4) {
+  margin-bottom: 16px;
+}
+
      /* Checkbox */
 
 .form-checkbox-wrapper {
